--- a/intro-to-vue3/index.html
+++ b/intro-to-vue3/index.html
@@ -12,15 +12,38 @@
         <div id="app">
             <div class="nav-bar"></div>
 
+            <div class="cart">Cart({{ cart }})</div>
+
             <div class="product-display">
                 <div class="product-container">
                     <div class="product-image">
-                        <img :src="image" />
+                        <img
+                            :src="image"
+                            :class="[ !inStock ? 'out-of-stock-img' : '' ]"
+                        />
                     </div>
                     <div class="product-info">
                         <h1>{{ product }}</h1>
                         <p v-if="inStock">In Stock</p>
                         <p v-else>Out of Stock</p>
+                        <ul>
+                            <li v-for="detail in details">{{ detail }}</li>
+                        </ul>
+                        <div
+                            v-for="variant in variants"
+                            :key="variant.id"
+                            @mouseover="updateImage(variant.image)"
+                            class="color-circle"
+                            :style="{ backgroundColor: variant.color }"
+                        ></div>
+                        <button
+                            class="button"
+                            :class="{ disabledButton: !inStock }"
+                            :disabled="!inStock"
+                            @click="addToCart"
+                        >
+                            Add to Cart
+                        </button>
                     </div>
                 </div>
             </div>
